--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -15,4 +15,4 @@ workflows:
           ./gradlew assembleRelease
           
     artifacts:
-      - app/build/outputs/apk/release/app-release.apk
+      - app/build/outputs/**/*.apk
