--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,11 +46,10 @@
             </intent-filter>
         </activity>
 
-        <!-- VPN service -->
+        <!-- ✅ VPN service - DIBETULKAN -->
         <service
             android:name=".AppMonitorVPNService"
-            android:permission="android.permission.BIND_VPN_SERVICE"
-            android:exported="true"
+            android:exported="false"
             android:foregroundServiceType="specialUse">
             <property
                 android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
@@ -63,11 +62,9 @@
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
             android:exported="true"
             android:label="CB Accessibility Engine">
-
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService"/>
             </intent-filter>
-
             <meta-data
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility_service_config"/>
