--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <!-- GPS Optimization Permissions -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-    
-    <!-- Wake Lock untuk GPS lock -->
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-
     <!-- Accessibility priority -->
     <uses-permission android:name="android.permission.BIND_ACCESSIBILITY_SERVICE" />
 
@@ -37,9 +29,6 @@
     <!-- Optional: log scan for debugging -->
     <uses-permission android:name="android.permission.READ_LOGS" />
 
-    <!-- VPN permission (MUST HAVE untuk VPN service) -->
-    <uses-permission android:name="android.permission.BIND_VPN_SERVICE" />
-
     <application
         android:allowBackup="true"
         android:theme="@style/Theme.AppCompat.Light"
@@ -57,12 +46,11 @@
             </intent-filter>
         </activity>
 
-        <!-- ✅ VPN service dengan GPS Optimization -->
+        <!-- ✅ VPN service - DIBETULKAN -->
         <service
             android:name=".AppMonitorVPNService"
             android:exported="false"
-            android:foregroundServiceType="specialUse"
-            android:permission="android.permission.BIND_VPN_SERVICE">
+            android:foregroundServiceType="specialUse">
             <property
                 android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
                 android:value="vpn_tunnel"/>
