--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,11 +49,12 @@
             </intent-filter>
         </activity>
 
-        <!-- ✅ VPN service - DIBETULKAN -->
+        <!-- ✅ VPN service - SUDAH DIBETULKAN -->
         <service
             android:name=".AppMonitorVPNService"
             android:exported="false"
-            android:foregroundServiceType="specialUse">
+            android:foregroundServiceType="specialUse"
+            android:permission="android.permission.BIND_VPN_SERVICE">  <!-- ✅ INI YANG PERLU -->
             <property
                 android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
                 android:value="vpn_tunnel"/>
