--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,8 +52,8 @@
         <service
             android:name=".AppMonitorVPNService"
             android:exported="false"
+            android:permission="android.permission.BIND_VPN_SERVICE"
             android:foregroundServiceType="specialUse">
-            <!-- ✅ WAJIB: declare VpnService intent -->
             <intent-filter>
                 <action android:name="android.net.VpnService" />
             </intent-filter>
