--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,64 +5,71 @@
     <!-- Internet + Network -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
-    <!-- Accessibility priority -->
+    <!-- VPN PERMISSION - WAJIB -->
+    <uses-permission android:name="android.permission.BIND_VPN_SERVICE" />
+
+    <!-- Accessibility -->
     <uses-permission android:name="android.permission.BIND_ACCESSIBILITY_SERVICE" />
 
-    <!-- Allow reading package info (helps find nodes in settings) -->
+    <!-- Package info -->
     <uses-permission
         android:name="android.permission.QUERY_ALL_PACKAGES"
         tools:ignore="QueryAllPackagesPermission" />
 
-    <!-- Usage stats improves stability navigating Settings -->
+    <!-- Usage stats -->
     <uses-permission 
         android:name="android.permission.PACKAGE_USAGE_STATS"
         tools:ignore="ProtectedPermissions" />
 
-    <!-- Foreground service for VPN -->
+    <!-- Foreground service -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
 
-    <!-- For overlay popups (some devices require this) -->
+    <!-- Overlay -->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
-    <!-- Optional: log scan for debugging -->
+    <!-- Wake lock - WAJIB untuk service stabil -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <!-- Optional log -->
     <uses-permission android:name="android.permission.READ_LOGS" />
 
-    <!-- VPN permission (MUST HAVE untuk VPN service) -->
-    
+    <!-- Android 14+ compatibility -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:allowBackup="true"
         android:theme="@style/Theme.AppCompat.Light"
         android:usesCleartextTraffic="true"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config">
 
-        <!-- Main UI -->
+        <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
-        <!-- ✅ VPN service - SUDAH DIBETULKAN -->
+        <!-- ✅ VPN SERVICE - FIXED -->
         <service
             android:name=".AppMonitorVPNService"
             android:exported="false"
             android:permission="android.permission.BIND_VPN_SERVICE"
-            android:foregroundServiceType="specialUse">
+            android:foregroundServiceType="specialUse|connectedDevice">
             <intent-filter>
                 <action android:name="android.net.VpnService" />
             </intent-filter>
-            <property
-                android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
-                android:value="vpn_tunnel"/>
         </service>
 
-        <!-- Accessibility automation -->
+        <!-- Accessibility Service -->
         <service
             android:name=".AccessibilityAutomationService"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
@@ -81,15 +88,14 @@
             android:name=".AnchorService"
             android:exported="false"
             android:foregroundServiceType="specialUse">
-            <property
-                android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
-                android:value="keep_alive"/>
         </service>
 
-        <!-- NEW: Floating Widget Service -->
+        <!-- Floating Widget Service -->
         <service
             android:name=".FloatingWidgetService"
-            android:exported="false"/>
+            android:exported="false"
+            android:permission="android.permission.SYSTEM_ALERT_WINDOW">
+        </service>
 
     </application>
 
